--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>
+		I want to participate in advancing the natural science by intergrating it with technology
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
